Table users {
  id bigint [pk, increment]
  name varchar(255)
  email varchar(255) [unique]
  email_verified_at timestamp [null]
  password varchar(255)
  role enum('CLIENT', 'MODERATOR', 'ADMIN') [default: 'CLIENT']
  remember_token varchar(100) [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table addresses {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id]
  street varchar(255)
  number integer
  complement varchar(100) [null]
  city varchar(100)
  state varchar(100)
  postal_code varchar(20)
  country varchar(100)
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table categories {
  id bigint [pk, increment]
  name varchar(255)
  description text [null]
  created_at timestamp
  updated_at timestamp
}

Table products {
  id bigint [pk, increment]
  category_id bigint [ref: > categories.id, null]
  name varchar(255)
  stock integer
  price decimal(10,2)
  image_url varchar(255) [null]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table discounts {
  id bigint [pk, increment]
  product_id bigint [ref: > products.id]
  description varchar(255) [null]
  start_date date
  end_date date
  discount_percentage decimal(5,2)
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table carts {
  id bigint [pk, increment]
  user_id bigint [ref: - users.id]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table cart_items {
  id bigint [pk, increment]
  cart_id bigint [ref: > carts.id]
  product_id bigint [ref: > products.id]
  quantity integer [default: 1]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table coupons {
  id bigint [pk, increment]
  code varchar(255) [unique]
  start_date date
  end_date date
  discount_percentage decimal(5,2)
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table orders {
  id bigint [pk, increment]
  user_id bigint [ref: > users.id, null]
  address_id bigint [ref: > addresses.id, null]
  order_date datetime
  coupon_id bigint [ref: > coupons.id, null]
  total_amount decimal(10,2)
  status enum('PENDING', 'PROCESSING', 'SHIPPED', 'COMPLETED', 'CANCELED') [default: 'PENDING']
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table order_items {
  id bigint [pk, increment]
  order_id bigint [ref: > orders.id]
  product_id bigint [ref: > products.id, null]
  quantity integer
  unit_price decimal(10,2)
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp [null]
}

Table password_reset_tokens {
  email varchar(255) [pk]
  token varchar(255)
  created_at timestamp [null]
}

Table sessions {
  id varchar(255) [pk]
  user_id bigint [ref: > users.id, null]
  ip_address varchar(45) [null]
  user_agent text [null]
  payload longtext
  last_activity integer
}

Table personal_access_tokens {
  id bigint [pk, increment]
  tokenable_type varchar(255)
  tokenable_id bigint
  name varchar(255)
  token varchar(64) [unique]
  abilities text [null]
  last_used_at timestamp [null]
  expires_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}
